# image-processing

./: .gitignore  CMakeLists.txt
src/: PointPlacer.cpp  PointPlacer.h  main.cpp  sdl.cu
src/edge_detection/: edge_detection.cpp  edge_detection.h
src/triangulation/: DelaunayTriang.cpp  control.cpp  s_hull_pro.cpp  s_hull_pro.h
